--- a/OnlineResultCheckPortal/OnlineResultCheckPortal.csproj
+++ b/OnlineResultCheckPortal/OnlineResultCheckPortal.csproj
@@ -955,6 +955,8 @@
     <Content Include="OCRP.edmx.diagram">
       <DependentUpon>OCRP.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\FTP update.pubxml" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Properties\PublishProfiles\onl.pubxml" />
     <None Include="Properties\PublishProfiles\OnliePortal.pubxml" />
     <None Include="Properties\PublishProfiles\Online.pubxml" />
@@ -1271,12 +1273,6 @@
     <Content Include="vendors\bower_components\bower\Tests\tests\prototypes.js" />
     <Content Include="vendors\bower_components\bower\Tests\tests\uri.js" />
     <Content Include="vendors\bower_components\bower\Tests\visual-tests.html" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\build\css\bootstrap-datetimepicker.css" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\build\css\bootstrap-datetimepicker.min.css" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\build\js\bootstrap-datetimepicker.min.js" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\Gruntfile.js" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\js\bootstrap-datetimepicker.js" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\tasks\bump_version.js" />
     <Content Include="vendors\bower_components\farbtastic\LICENSE.txt" />
     <Content Include="vendors\bower_components\farbtastic\src\farbtastic.js" />
     <Content Include="vendors\bower_components\flot-orderBars\js\jquery.flot.orderBars.js" />
@@ -4563,21 +4559,6 @@
     <Content Include="vendors\bower_components\bower\Docs\En\Uri.md" />
     <Content Include="vendors\bower_components\bower\README.md" />
     <Content Include="vendors\bower_components\bower\Source\package.yml" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\.bower.json" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\bower.json" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\build\nuget\Bootstrap.v3.Datetimepicker.4.0.0.nupkg" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\build\nuget\Bootstrap.v3.Datetimepicker.CSS.4.0.0.nupkg" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\component.json" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\composer.json" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\CONTRIBUTING.md" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\LICENSE" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\package.json" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\README.md" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\less\bootstrap-datetimepicker-build.less" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\less\_bootstrap-datetimepicker.less" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\nuget\Bootstrap.v3.Datetimepicker.CSS.nuspec" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\nuget\Bootstrap.v3.Datetimepicker.nuspec" />
-    <Content Include="vendors\bower_components\eonasdan-bootstrap-datetimepicker\src\nuget\install.ps1" />
     <Content Include="vendors\bower_components\farbtastic\.bower.json" />
     <Content Include="vendors\bower_components\farbtastic\bower.json" />
     <Content Include="vendors\bower_components\farbtastic\component.json" />
