--- a/OnlineResultCheckPortal/OnlineResultCheckPortal.csproj
+++ b/OnlineResultCheckPortal/OnlineResultCheckPortal.csproj
@@ -697,6 +697,9 @@
     <Compile Include="GetStudentProfileByAdministrator_Result3.cs">
       <DependentUpon>OCRP.tt</DependentUpon>
     </Compile>
+    <Compile Include="GetStudentProfileByAdministrator_Result4.cs">
+      <DependentUpon>OCRP.tt</DependentUpon>
+    </Compile>
     <Compile Include="GetStudentProfile_Result.cs">
       <DependentUpon>OCRP.tt</DependentUpon>
     </Compile>
